# docs

./: 404.html  BINA_poster.html  beginner_setup.html  index.html  installation.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  widget_further_info.html
.github/workflows/: deploy_docs.yml
BINA_poster/: index.html
beginner_setup/: index.html
docs/: BINA_poster.md
examples/: skimage_workflow.html
examples/measure/: measure_widget.html
examples/measure/measure_widget/: index.html
examples/skimage_workflow/: index.html
examples/workflow/: workflow_napari-assistant.html  workflow_scripting.html  workflow_widget.html
examples/workflow/workflow_napari-assistant/: index.html
examples/workflow/workflow_scripting/: index.html
examples/workflow/workflow_widget/: index.html
installation/: index.html
search/: search_index.json
tutorial/: 00_setup.html  01_example_pipeline.html  02_easy_ML.html  03_build_pipeline.html
tutorial/00_setup/: index.html
tutorial/01_example_pipeline/: index.html
tutorial/02_easy_ML/: index.html
tutorial/03_build_pipeline/: index.html
tutorial/cellpainting/: scripting_workflow.html
tutorial/cellpainting/scripting_workflow/: index.html
widget_further_info/: index.html
